[package]
name = "nekop2p"
description = "A simple p2p file sharing system built on tokio and tarpc."
authors = ["Neko <lowpolyneko@protonmail.ch>"]
repository = "https://github.com/lowpolyneko/nekop2p"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
tarpc = "0.34.0"
tokio = { version = "1.40.0", features = ["fs"] }
