[package]
name = "nekop2p"
description = "A simple p2p file sharing system built on tokio and tarpc."
authors = ["Neko <lowpolyneko@protonmail.ch>"]
repository = "https://github.com/lowpolyneko/nekop2p"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
delay_map = "0.4.0"
tarpc = "0.34.0"
tokio = { version = "1.40.0", features = ["fs"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
