[package]
name = "nekopeer"
description = "A simple p2p file sharing system built on tokio and tarpc."
authors = ["Neko <lowpolyneko@protonmail.ch>"]
repository = "https://github.com/lowpolyneko/nekop2p"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
futures = "0.3.30"
nekop2p = { path = "../nekop2p" }
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
